--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,13 +1,19 @@
 {
   "version": "2.0",
   "app_name": "bountiful-api",
+  "automatic_layer": true,
   "stages": {
     "dev": {
-      "api_gateway_stage": "dev"
-      "DB_HOST": "bountiful-db.cmw6eaixtkna.us-east-2.rds.amazonaws.com",
-      "DB_PORT": "1964"
-      "DB_USER": "zpaksi"
-      "DB_PASS": "Div129690!"
+      "api_gateway_stage": "dev",
+      "environment_variables": {
+        "DB_HOST": "bountiful-db2.cmw6eaixtkna.us-east-2.rds.amazonaws.com",
+        "DB_PORT": "1964",
+        "DB_USER": "zpaksi",
+        "DB_PASS": "Div129690!",
+        "DB_NAME": "b_store"
+      },
+      "subnet_ids": ["subnet-d853aca5", "subnet-f33711bf", "subnet-e17afb8a"],
+      "security_group_ids": ["sg-5eb69628"]
     }
   }
 }
