--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,7 +1,6 @@
 {
   "version": "2.0",
   "app_name": "bountiful-api",
-  "automatic_layer": true,
   "stages": {
     "dev": {
       "api_gateway_stage": "dev",
@@ -12,6 +11,7 @@
         "DB_PASS": "Div129690!",
         "DB_NAME": "b_store"
       },
+      "layers": ["arn:aws:lambda:us-east-2:981391928065:layer:bountiful-api-utils:7"],
       "subnet_ids": ["subnet-d853aca5", "subnet-f33711bf", "subnet-e17afb8a"],
       "security_group_ids": ["sg-5eb69628"]
     }
